--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Indrajith Ekanayake"
-  avatar           : "profile.png"
+  avatar           : "https://www.google.com/url?sa=i&url=https%3A%2F%2Flk.linkedin.com%2Fin%2Findrajithek&psig=AOvVaw1YqaOBIPxop7qetvNZEzoq&ust=1678225384270000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCPDPp_GiyP0CFQAAAAAdAAAAABAf"
   bio              : "Microsoft WI MVP | Researcher"
   location         : "Colombo, Sri Lanka"
-  employer         : "https://www.codification.io/"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=idLLQh4AAAAJ&hl=en"
   email            :
@@ -106,10 +106,10 @@ author:
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-7173-1754"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : "https://stackoverflow.com/users/8134164/indrajith-ekanayake"
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
