config profile pic update

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Indrajith Ekanayake"
-  avatar           : "https://www.google.com/url?sa=i&url=https%3A%2F%2Flk.linkedin.com%2Fin%2Findrajithek&psig=AOvVaw1YqaOBIPxop7qetvNZEzoq&ust=1678225384270000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCPDPp_GiyP0CFQAAAAAdAAAAABAf"
+  avatar           : "profile.png"
   bio              : "Microsoft WI MVP | Researcher"
   location         : "Colombo, Sri Lanka"
   employer         : 
