--- a/_config.yml
+++ b/_config.yml
@@ -102,11 +102,11 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/indrajithek"
+  linkedin         : "indrajithek"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-7173-1754"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/8134164/indrajith-ekanayake"
+  stackoverflow    : "indrajith-ekanayake"
   steam            :
   tumblr           :
   twitter          : 
