--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Indrajith Ekanayake"
 title_separator          : "-"
 name                     : &name "Indrajith Ekanayake"
 description              : &description "Microsoft WI MVP | Researcher"
-url                      : https://indrajithekanayake.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://indrajithekanayake.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "indrajithekanayake/indrajithekanayake.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -106,7 +106,7 @@ author:
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-7173-1754"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "indrajith-ekanayake"
+  stackoverflow    : "8134164/indrajith-ekanayake"
   steam            :
   tumblr           :
   twitter          : 
